# calendarioFarmacia

./: .gitignore  README.md  pyproject.toml
src/calendario_farmacia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: hardcoded.py
src/farmacia_app/: __init__.py  main.py
src/farmacia_app/data/: db.py  employee_repository.py  hardcoded.py  holidays_repository.py  openholidays_client.py  schedule_repository.py  turn_rules_repository.py  weekly_template_repository.py
src/farmacia_app/domain/: absence_policy.py
src/farmacia_app/ui/: dialogs.py  employees_page.py  main_window.py  rules_dialog.py  shared.py
src/ui/: main_window.py
