[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "calendario-farmacia"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7,<6.11"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
